fix the create tarefa
